# multiqueue

./: Cargo.toml  LICENSE  README.md
backend/: Cargo.toml  build.rs
backend/src/: gates.rs  lib.rs  multiqueue.rs  proto.rs  tasks.rs
backend/src/api/: handlers.rs  mod.rs  routes.rs
backend/tests/: behavior.rs
frontend/: buf.gen.yaml  package-lock.json  package.json
frontend/src/components/: ProgressBar.svelte  TaskCard.svelte  TaskForm.svelte  TaskList.svelte
frontend/src/lib/: api.ts
frontend/src/lib/proto/: multiqueue_pb.ts
frontend/src/routes/: +page.svelte
protos/: multiqueue.proto
scripts/: cancel_tasks.sh
src/: gates.rs  lib.rs  main.rs  multiqueue.rs  task.rs  tasks.rs
tests/: behavior.rs
