[package]
name = "multiqueue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
governor = "0.7.0"
indoc = "2.0.6"
nonzero_ext = "0.3.0"
rand = "0.9.2"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
