[package]
name = "multiqueue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.7.4", features = ["macros"] }
governor = "0.7.0"
indoc = "2.0.6"
nonzero_ext = "0.3.0"
prost = "0.12.3"
pbjson = "0.8.0"
pbjson-types = "0.8.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4"] }

[build-dependencies]
prost-build = "0.12.3"
pbjson-build = "0.8.0"
